Whitespace style corrected

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,5 +6,5 @@
 }
 
 .post-content-text {
-  white-space: pre;
+  white-space: pre-wrap;
 }
